target_sources(ablateLibrary
        PRIVATE
        flowProcess.cpp
        navierStokesTransport.cpp
        speciesTransport.cpp
        evTransport.cpp
        tChemSootReactions.cpp
        twoPhaseEulerAdvection.cpp
        gravity.cpp
        pressureGradientScaling.cpp
        arbitrarySource.cpp
        buoyancy.cpp
        constantPressureFix.cpp
        les.cpp
        chemistry.cpp
        radiationLoss.cpp

        PUBLIC
        process.hpp
        flowProcess.hpp
        navierStokesTransport.hpp
        speciesTransport.hpp
        evTransport.hpp
        tChemSootReactions.hpp
        twoPhaseEulerAdvection.hpp
        gravity.hpp
        pressureGradientScaling.hpp
        arbitrarySource.hpp
        buoyancy.hpp
        constantPressureFix.hpp
        les.hpp
        chemistry.hpp
        radiationLoss.hpp
        )
add_subdirectory(tchemSoot)